--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/resources/img/Group 1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/resources/img/group1.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/resources/style/reset.css">
     <link rel="stylesheet" href="assets/resources/style/style.css">
     <!--Fontes-->
@@ -17,7 +17,7 @@
         <div class="m-superior">
             <a href="index.html">
                 <div class="logo">
-                    <img src="assets/resources/img/Group 1.png" alt="logo" class="img-logo">
+                    <img src="assets/resources/img/group1.png" alt="logo" class="img-logo">
                     <span>GoTech</span>
                 </div>
             </a>
